--- a/MyLand-main/V2 (Grid Layout)/index.html
+++ b/MyLand-main/V2 (Grid Layout)/index.html
@@ -10,6 +10,7 @@
     <meta name="description" content="personal description and contacts">
     <title>JPportfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="img/logo_jp.png" type="image/png">
 </head>
 <body>
     <div class="container">
