--- a/MyLand-main/V2 (Grid Layout)/CV_short/index.html
+++ b/MyLand-main/V2 (Grid Layout)/CV_short/index.html
@@ -22,7 +22,7 @@
     <header id="inizio">
         <h1>INFORMAZIONI PERSONALI</h1>
         <div class="container clearfix">
-            <img src="images/fototessera.jpg" alt="foto">
+            <img src="Images/fototessera.jpg" alt="foto">
             <ul>
                 <li>Nome: Giacomo</li>
                 <li>Cognome: Piatto</li>
